network.tf
#data "aws_availability_zones" "available" {}
#
## Virtaual Private Connection
#resource "aws_vpc" "main" {
#  cidr_block           = var.cidr
#  enable_dns_support   = true
#  enable_dns_hostnames = true
#  tags = merge(local.common_tags, {
#    Name = "${var.project}-${var.env}-vpc"
#  })
#}
#
## Internet Gateway
#resource "aws_internet_gateway" "igw" {
#  vpc_id = aws_vpc.main.id
#
#  tags = merge(local.common_tags, {
#    Name = "${var.project}-${var.env}-igw"
#  })
#}
#
## Public Subnets (3 AZs)
#resource "aws_subnet" "public" {
#  count                   = 3
#  vpc_id                  = aws_vpc.main.id
#  cidr_block              = cidrsubnet(var.cidr, 8, count.index)
#  availability_zone       = data.aws_availability_zones.available.names[count.index]
#  map_public_ip_on_launch = true
#
#  tags = merge(local.common_tags, {
#    Name = "${var.project}-${var.env}-public-subnet-${count.index + 1}"
#    Tier = "public"
#  })
#}
#
## Private Subnets (3 AZs)
#resource "aws_subnet" "private" {
#  count             = 3
#  vpc_id            = aws_vpc.main.id
#  cidr_block        = cidrsubnet(var.cidr, 8, count.index + 10)
#  availability_zone = data.aws_availability_zones.available.names[count.index]
#
#  tags = merge(local.common_tags, {
#    Name = "${var.project}-${var.env}-private-subnet-${count.index + 1}"
#    Tier = "private"
#  })
#}
#
## Elastic IPs for NAT GW
#resource "aws_eip" "nat" {
#  count  = 3
#  domain = "vpc"
#
#  tags = merge(local.common_tags, {
#    Name = "${var.project}-${var.env}-nat-eip-${count.index + 1}"
#  })
#}
#
#resource "aws_nat_gateway" "nat" {
#  count         = 3
#  allocation_id = aws_eip.nat[count.index].id
#  subnet_id     = aws_subnet.public[count.index].id
#
#  tags = merge(local.common_tags, {
#    Name = "${var.project}-${var.env}-nat-${count.index + 1}"
#  })
#
#  depends_on = [aws_internet_gateway.igw]
#}
#
## Public Route Table
#resource "aws_route_table" "public" {
#  vpc_id = aws_vpc.main.id
#
#  route {
#    cidr_block = "0.0.0.0/0"
#    gateway_id = aws_internet_gateway.igw.id
#  }
#
#  tags = merge(local.common_tags, {
#    Name = "${var.project}-${var.env}-public-rt"
#  })
#}
#
## Public Route Table association
#resource "aws_route_table_association" "public" {
#  count          = 3
#  subnet_id      = aws_subnet.public[count.index].id
#  route_table_id = aws_route_table.public.id
#}
#
## Private Route Table
#resource "aws_route_table" "private" {
#  count  = 3
#  vpc_id = aws_vpc.main.id
#
#  route {
#    cidr_block     = "0.0.0.0/0"
#    nat_gateway_id = aws_nat_gateway.nat[count.index].id
#  }
#
#  tags = merge(local.common_tags, {
#    Name = "${var.project}-${var.env}-private-rt-${count.index + 1}"
#  })
#}
#
## Private Route Table association
#resource "aws_route_table_association" "private" {
#  count          = 3
#  subnet_id      = aws_subnet.private[count.index].id
#  route_table_id = aws_route_table.private[count.index].id
#}
#
#
